# substratekitties

./: .gitignore  Cargo.toml  README.md
runtime/: Cargo.toml
runtime/src/: lib.rs  substratekitties.rs
runtime/wasm/: Cargo.toml  build.sh
src/: chain_spec.rs  main.rs
