[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[[bin]]
name = 'substratekitties-demo'
path = 'src/main.rs'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = 'c7b73a1a575e9d68ade62c9391c645f3fb75e553'
[profile.release]
panic = 'unwind'

[build-dependencies]
vergen = '3'
