[[bin]]
name = 'substratekitties'
path = 'src/main.rs'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'

[build-dependencies]
vergen = '3'
[profile.release]
panic = 'unwind'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.2'
parking_lot = '0.7.1'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.network]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-network'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '0ee04a854ebfc60f1653ad602ccfc11c79c050fd'
